overflow bug fixed

--- a/front-end/home/style.css
+++ b/front-end/home/style.css
@@ -2,10 +2,7 @@
     margin: 0;
     padding: 0;
 }
-body
-{
-    overflow: hidden;
-}
+
 nav div h3
 {
     position: absolute;
