--- a/front-end/userInfo/style.css
+++ b/front-end/userInfo/style.css
@@ -2,9 +2,7 @@
     margin: 0;
     padding: 0;
 }
-body
-{
-}
+
 nav div h3
 {
     position: absolute;
